[FIXED HUDSON-2922] Align column headings in projectView
git-svn-id: https://hudson.dev.java.net/svn/hudson/trunk/hudson/main@15040 71c3de6d-444a-0410-be80-ed276b4c234a

--- a/war/resources/css/style.css
+++ b/war/resources/css/style.css
@@ -461,6 +461,13 @@ th.pane {
   white-space: nowrap;
 }
 
+#projectstatus th.ctr {
+  text-align: center;
+}
+#projectstatus th {
+  text-align: left;
+}
+
 /* ============================ health report hover ========================== */
 
 .healthReport a {
